RP-891 Add unpromoted changes only to inactive concepts reports